--- a/assets/css/dpanel.css
+++ b/assets/css/dpanel.css
@@ -1,12 +1,22 @@
+.Main-Container.scroll-active header.dpanel-header{
+position: fixed;
+right: 0;
+box-shadow: none;
+transition: 0.0001s;
 
+}
+.Main-Container.scroll-active aside.dpanel-sidebar{position: fixed; }
 header.dpanel-header{
-/* width: calc(100% - var(--sidebar-width)); */
-/* float: right; */
+width: calc(100% - var(--sidebar-width));
+right: 0;
+float: right;
+/* transform: translateX(var(--sidebar-width)); */
 font-family: var(--font-default);
 transition: 0.5s;
 background-color: var(--first-color);
 box-shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, 0.5) ;
-
+height: var(--navbar-hieght);
+z-index: 997;
 }
 .dpanel-content , .dpanel-sidebar {
     font-family: var(--font-default);
@@ -18,39 +28,415 @@ header.dpanel-header i{
 }
 header.dpanel-header .nav-link{color: var(--text-color);}
 .navbar>ul>li>a:before {background-color: antiquewhite !important;}
-/* search-form css start */
-#search-form{
+
+--------------------------------------------------------------*/
+/* Fonts */
+:root {
+  --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-primary: "Amatic SC", sans-serif;
+  --font-secondary: "Inter", sans-serif;
+}
+
+/* Colors */
+:root {
+  --color-default: #212529;
+  --color-primary: var(--first-color);
+  --color-secondary: #37373f;
+}
+
+/* Smooth scroll behavior */
+:root {
+  scroll-behavior: smooth;
+}
+
+/*--------------------------------------------------------------
+# General
+--------------------------------------------------------------*/
+body {
+  font-family: var(--font-default) !important;
+  color: var(--color-default);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-secondary);
+}
+
+/*--------------------------------------------------------------
+# Sections & Section Header
+--------------------------------------------------------------*/
+section {
+  overflow: hidden;
+  padding: 80px 0;
+}
+
+.section-bg {
+  background-color: #eee;
+}
+
+.section-header {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.section-header h2 {
+  font-size: 13px;
+  letter-spacing: 1px;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  color: #7f7f90;
+  text-transform: uppercase;
+  font-family: var(--font-default);
+}
+
+.section-header p {
+  margin: 0;
+  font-size: 48px;
+  font-weight: 400;
+  font-family: var(--font-primary);
+}
+
+.section-header p span {
+  color: var(--color-primary);
+}
+
+
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+
+@media (max-width: 575px) {
+  .header {
+    height: 70px;
+  }
+}
+
+.header.sticked {
+  border-color: #fff;
+  border-color: #eee;
+}
+
+.header .logo img {
+  max-height: 40px;
+  margin-right: 6px;
+}
+
+.header .logo h1 {
+  font-size: 28px;
+  font-weight: 700;
+  color: #000;
+  margin: 0;
+  
+  font-family: var(--font-secondary);
+}
+
+.header .logo h1 span {
+  color: var(--color-primary);
+}
+
+.header .btn-book-a-table,
+.header .btn-book-a-table:focus {
+  font-size: 14px;
+  color: #fff;
+  background: var(--color-primary);
+  padding: 8px 20px;
+  margin-left: 30px;
+  border-radius: 50px;
+  transition: 0.3s;
+}
+
+.header .btn-book-a-table:hover,
+.header .btn-book-a-table:focus:hover {
+  color: #fff;
+  background: var(--first-color-lighter);
+}
+
+section {
+  scroll-margin-top: 90px;
+}
+
+/*--------------------------------------------------------------
+# Desktop Navigation
+--------------------------------------------------------------*/
+@media (min-width: 1280px) {
+  .navbar {
+    padding: 0;
+  }
+
+  .navbar ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+
+  .navbar li {
+    position: relative;
+  }
+
+  .navbar>ul>li {
+    white-space: nowrap;
+    padding: 10px 0 10px 28px;
+  }
+
+  .navbar a,
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 3px;
+    font-family: var(--font-secondary);
+    font-size: 16px;
+    font-weight: 600;
+    color: #7f7f90;
+    white-space: nowrap;
+    transition: 0.3s;
+    position: relative;
+  }
+
+  .navbar a i,
+  .navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+  }
+
+  .navbar>ul>li>a:before {
+    content: "";
     position: absolute;
     width: 100%;
-    
-    display: none;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    height: 100%;
-    background-color:var(--first-color);
-}
-#search-form.active{ display: block;}
+    height: 2px;
+    bottom: -6px;
+    left: 0;
+    background-color: var(--color-primary);
+    visibility: hidden;
+    width: 0px;
+    transition: all 0.3s ease-in-out 0s;
+  }
 
-#search-form input {
-    width: 70%;
+  .navbar a:hover:before,
+  .navbar li:hover>a:before,
+  .navbar .active:before {
+    visibility: visible;
+    width: 100%;
+  }
+
+  .navbar a:hover,
+  .navbar .active,
+  .navbar .active:focus,
+  .navbar li:hover>a {
+    color: #000;
+  }
+
+   .dropdown ul {
+    display: block;
+    position: absolute;
+    left: 28px;
+    top: calc(100% + 30px);
+    margin: 0;
+    padding: 10px 0;
+    z-index: 99;
+    opacity: 0;
+    visibility: hidden;
+    background: #fff;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    transition: 0.3s;
+    border-radius: 4px;
+  }
+
+ .dropdown ul li {
+    min-width: 200px;
+  }
+
+ .dropdown ul a {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: none;
+    font-weight: 600;
+  }
+
+ .dropdown ul a i {
+    font-size: 12px;
+  }
+
+ .dropdown ul a:hover,
+ .dropdown ul .active:hover,
+ .dropdown ul li:hover>a {
+    color: var(--color-primary);
+  }
+
+ .dropdown:hover>ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+  }
+
+ .dropdown .dropdown ul {
+    top: 0;
+    left: calc(100% - 30px);
+    visibility: hidden;
+  }
+
+ .dropdown .dropdown:hover>ul {
+    opacity: 1;
+    top: 0;
+    left: 100%;
+    visibility: visible;
+  }
 }
-#search-form input , button ,.btn{
-    height: 40px ;
-    /* margin-right: auto; */
+
+@media (min-width: 1280px) and (max-width: 1366px) {
+ .dropdown .dropdown ul {
+    left: -90%;
+  }
+
+ .dropdown .dropdown:hover>ul {
+    left: -100%;
+  }
 }
-#search-form .btn-close { position: absolute; top: 0; right: 5%;}
+
+@media (min-width: 1280px) {
+
+  .mobile-nav-show,
+  .mobile-nav-hide {
+    display: none;
+  }
+}
+
+/*--------------------------------------------------------------
+# Mobile Navigation
+--------------------------------------------------------------*/
+@media (max-width: 1279px) {
+  .navbar {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    max-width: 400px;
+    border-left: 1px solid #666;
+    bottom: 0;
+    transition: 0.3s;
+    z-index: 9997;
+  }
+
+  .navbar ul {
+    position: absolute;
+    inset: 0;
+    padding: 50px 0 10px 0;
+    margin: 0;
+    background: rgba(255, 255, 255, 0.9);
+    overflow-y: auto;
+    transition: 0.3s;
+    z-index: 9998;
+  }
+
+  .navbar a,
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    font-family: var(--font-secondary);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.8);
+    font-size: 16px;
+    font-weight: 600;
+    color: #7f7f90;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+
+  .navbar a i,
+  .navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+  }
+
+  .navbar a:hover,
+  .navbar li:hover>a {
+    color: #000;
+  }
+
+  .navbar .active,
+  .navbar .active:focus {
+    color: #000;
+    border-color: var(--color-primary);
+  }
+
+ .dropdown ul,
+ .dropdown .dropdown ul {
+    position: static;
+    display: none;
+    padding: 10px 0;
+    margin: 10px 20px;
+    transition: all 0.5s ease-in-out;
+    border: 1px solid #eee;
+  }
+
+ .dropdown>.dropdown-active,
+ .dropdown .dropdown>.dropdown-active {
+    display: block;
+  }
+
+  .mobile-nav-show {
+    color: var(--color-secondary);
+    font-size: 28px;
+    cursor: pointer;
+    line-height: 0;
+    transition: 0.5s;
+    z-index: 9999;
+    margin: 0 10px 0 20px;
+  }
+
+  .mobile-nav-hide {
+    color: var(--color-secondary);
+    font-size: 32px;
+    cursor: pointer;
+    line-height: 0;
+    transition: 0.5s;
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    z-index: 9999;
+  }
+
+  .mobile-nav-active {
+    overflow: hidden;
+  }
+
+  .mobile-nav-active .navbar {
+    right: 0;
+  }
+
+  .mobile-nav-active .navbar:before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: rgba(255, 255, 255, 0.8);
+    z-index: 9996;
+  }
+}
+
+
+
 /* sidebar css start */
 aside .navbar-brand{
     padding: .5rem 1rem;
     transition: .5s;
 }
 aside.dpanel-sidebar{
+    position: relative;
     width: var(--sidebar-width);
     color: var(--text-color);
     float: left;
     left: 0;
-    top: var(--navbar-hieght);
+    /* top: var(--navbar-hieght); */
     font-family: var(--font-default);
     font-weight: 600;
     height: 100vh;
@@ -60,37 +446,89 @@ aside.dpanel-sidebar{
 /* aside.dpanel-sidebar.active{
     background-color:n;
 } */
-aside.dpanel-sidebar .sidebar-item {
+aside.dpanel-sidebar ul.nav{
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+
+}
+aside.dpanel-sidebar ul.nav li.sidebar-item {
+position: relative;
+width: 100%;
+list-style: none;
+/* transition: 0.5s; */
+text-transform: capitalize;
+border-top-left-radius: 30px;
+border-bottom-left-radius: 30px;
+/* overflow: hidden; */
+ }
+li.sidebar-item a{
+    position: relative;
+    display: block;
+    width: 100%;
     display: flex;
-    justify-content: flex-start ;
-    align-items: center;
-    /* overflow-x: hidden; */
-    transition: 1s;
-    
-    height: 4rem;
-    padding: 1.5rem;
-    cursor: pointer;
+    /* overflow: hidden; */
+    text-decoration: none;
+    color:var(--text-color) ;
+}
+li.sidebar-item:hover ,li.sidebar-item.active{background-color: var(--body-color);}
+li.sidebar-item:hover a ,li.sidebar-item.active a{color: var(--first-color);}
+
+li.sidebar-item a .icon , li.sidebar-item a .title{
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+ 
+}
+li.sidebar-item a .icon{
+    font-size: 1.75rem;
     color: var(--text-color);
 }
-aside.dpanel-sidebar .sidebar-item.active {width: 100%;  border-bottom: 1px solid silver;border-top: 1px solid silver; background-color:var(--first-color-alt);}
-aside.dpanel-sidebar .sidebar-item span{margin-left: 1rem; text-transform: capitalize;}
-aside.dpanel-sidebar .sidebar-item i{font-size: 1.5rem; color: var(--text-color);}
-aside.dpanel-sidebar.active .sidebar-item span{
-    transition: 0.5s;
-    display: none;  
-} 
-@media (max-width:767px){
-    aside.dpanel-sidebar .sidebar-item span{
-        transition: 0.5s;
-        display: none;  
-    } 
-    aside.dpanel-sidebar .sidebar-item {padding: 0; padding-left:.3rem ; justify-content: center; transition: .1s; }
-    #menu-toggle{
-        display: none ;
-    }
+
+li.sidebar-item a .title{
+    padding: 0 10px;
+    text-align: start;
+    white-space: nowrap;
+
 }
-aside.dpanel-sidebar.active .sidebar-item {
-    width: 100% ; padding: 0; padding-left:.3rem ; justify-content: center; transition: .1s; }
+aside.dpanel-sidebar.active li.sidebar-item a .title{display: none;}
+    li.sidebar-item a img {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+    }
+    li.sidebar-item .title{
+        padding: 0 10px;
+    }
+    /* curve Outside */
+    li.sidebar-item.active a::before{
+        content: '';
+        position: absolute;
+        top:-50px;
+        width: 50px;
+        right: 0;
+        height: 50px;
+        border-radius: 50%;
+        background-color: transparent;
+        box-shadow: 35px 35px 0 10px var(--body-color);
+        pointer-events: none;
+    }
+    li.sidebar-item.active  a::after{
+        content: '';
+        position: absolute;
+        bottom:-50px;
+        width: 50px;
+        right: 0;
+        height: 50px;
+        border-radius: 50%;
+        background-color: transparent;
+        pointer-events: none;
+        box-shadow: 35px -35px 0 10px var(--body-color);
+    }
 
 /*  main content css */
 
@@ -121,4 +559,14 @@ main.dpanel-content{
 }
 .card .card-heading{
     color : var(--clr);
+}
+.chartjs-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 200px;
+}
+.chart{
+    height: 200px;
+    background-color: red;
 }
